--- a/Provider.css
+++ b/Provider.css
@@ -18,35 +18,34 @@ body{
    
     
 }
+
 #map {
     height: 400px;  /* The height is 400 pixels */
     width: 100%;  /* The width is the width of the web page */
 }
 
-
-h3{
-    position: relative;
-    top:20px;
-    margin: 0px;
-}
 h4{
     color: white;
     text-align: center;
     font-size: 25px;
     font-family:'Courier New', Courier, monospace;
+    margin: 0px;
+    position: relative;
+    top: +15px;
+    user-select: none;
 }
-
-footer{
-
-    display: block;
-    position: fixed;
-    bottom: 0px;
-    background-color: black;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    height: 70px;
-    width: 100%;
+#header{
+    position: relative;
+    left: +10%;
+    background-image: linear-gradient(-90deg,black,rgb(218, 0, 0),black);
+    width: 80%;
+    filter: opacity(83%);
+    height: 60px;;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+section{
+    min-height: 100%;
 }
 #pool{
     height: 400px;;
@@ -56,21 +55,43 @@ footer{
 button{
   position: relative; 
   display: inline;
-  top: -70%;
+  top: -62%;
   margin-left: 5px;
-    border-radius: 100%;
-    height: 50px;;
-    font-size: 10px;
-    width: 50px;
-    left: +15px;
-    border: none;
-    color: white;
+  border-radius: 100%;
+  height: 40px;;
+  font-size: 8.5px;
+  outline: none;
+  width: 40px;
+  left: +15px;
+  border: none;
+  color: white;
+  overflow: hidden;
 }
-
+button:hover{
+transform:scale(1.1);
+}
 #reject{
     left: +30px;;
     background-color: red;
 }
 #confirm{
     background-color: green;
+}
+h3{
+    position: relative;
+    top:20px;
+    margin: 0px;
+}
+
+footer{
+
+    display: block;
+    position: relative;
+    bottom: 0px;
+    background-color: black;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    height: 70px;
+    width: 100%;
 }
